// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`func-0.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

function foo(x: number, y) {
  return x + y;
}

foo(1, "");

=====================================output=====================================
// @flow

function foo(x: number, y) {
  return x + y;
}

foo(1, "");

================================================================================
`;

exports[`func-1.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

function foo(x, y) {
  return x + y(x);
}

foo(1, (z) => z + 1);

=====================================output=====================================
// @flow

function foo(x, y) {
  return x + y(x);
}

foo(1, (z) => z + 1);

================================================================================
`;

exports[`func-2.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

function foo(x, y) {
  function bar(z, w) {
    return x + z + y + w;
  }
  bar(x, y);
}

foo(1, 1);

=====================================output=====================================
// @flow

function foo(x, y) {
  function bar(z, w) {
    return x + z + y + w;
  }
  bar(x, y);
}

foo(1, 1);

================================================================================
`;

exports[`func-3.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow
function throws_arg() {
  throw 42;
}

=====================================output=====================================
// @flow
function throws_arg() {
  throw 42;
}

================================================================================
`;
